--- a/style.css
+++ b/style.css
@@ -268,6 +268,9 @@
     background: var(--bittersweet);
     color: var(--white);
   }
+  .product-card {
+    cursor: pointer;
+  }
   
   .card-action-tooltip {
     position: absolute;
